Fixed singles layout on mobile

--- a/css/input-range.css
+++ b/css/input-range.css
@@ -15,8 +15,8 @@
 	background-color: var(--input-primary);
 	border: 0;
 	border-radius: 1rem;
-	-webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	/* -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 	-webkit-appearance: none;
 	appearance: none;
 	cursor: pointer;
@@ -28,8 +28,8 @@
 	background-color: var(--input-primary);
 	border: 0;
 	border-radius: 1rem;
-	-moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	/* -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 	-moz-appearance: none;
 	appearance: none;
 	cursor: pointer;
